# langchain-s3-cached-embeddings

./: README.md  pyproject.toml
src/langchain_s3_cached_embeddings/: s3_cached_embeddings.py
tests/: mock_embeddings.py  test_s3_cached_embeddings.py
