[project]
name = "langchain-s3-cached-embeddings"
version = "0.8.0"
description = "langchain embeddings wrapper to persist embeddings for re-use later"
authors = [
    {name = "Carmine DiMascio", email = "cdimascio@gmail.com"},
]
dependencies = ["boto3>=1.35.90", "langchain-core>=0.3.28"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
